[tool.poetry]
name = "repl_python3_beta_DogeBot"
version = "0.1.0"
description = ""
authors = ["Skigamer13 hausjoey@icloud.com"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.0.1"
replit = "^3.0.0"
flask = "^1.1.2"
youtube-dl = "^2021.4.26"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
